--- a/teste.html
+++ b/teste.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Clinica de Pre-pos">
-    <meta name="keywords" content="Aesthetic, Pre-pos, Clinica em Maputo, html">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>A clinica</title>
-    <link rel="icon" href="img/favicon.png" type="image/x-icon">
+    <title>Infinite Automatic Carousel Example</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+    <link rel="stylesheet" href="style.css">
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
@@ -23,7 +20,6 @@
     <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
-
     <style>
         .card {
             position: relative;
@@ -169,39 +165,36 @@
             font-size: 12px;
         }
 
-        .carousel-inner {
-            cursor: grab;
-            overflow: hidden;
+        .body {
+            background: transparent;
+            height: 200px;
         }
 
-        .carousel-inner.grabbing {
-            cursor: grabbing;
+        .body>.body-ul {
+            position: absolute;
+            width: 100%;
         }
 
-        .carousel-control-next {
-            background-color: #808080;
-            width: 2rem;
-            height: 2rem;
-            opacity: 0.1;
-            border: none;
+        ul.body-ul>li {
+            /* width: 25%; */
+            list-style-type: none;
+            position: absolute;
+            top: 0;
+            padding: 20px;
+            height: 200px;
+            opacity: 0;
+            padding-top: 40px;
+            text-align: center;
+            transition: 1s opacity;
         }
 
-        .carousel-control-prev {
-            width: 2rem;
-            height: 2rem;
-            background-color: #808080;
-            opacity: 0.1;
-            border: none;
+        li h5 strong img {
+            height: 7rem;
         }
 
-        /* change transition duration to control the speed of fade effect */
-        .carousel-item {
-            transition: transform 2.6s ease-in;
-        }
-
-        .carousel-fade .active.carousel-item-start,
-        .carousel-fade .active.carousel-item-end {
-            transition: opacity 0s 2.6s;
+        .active {
+            opacity: 1 !important;
+            z-index: 100;
         }
     </style>
 </head>
@@ -468,12 +461,9 @@
     </header>
     <!-- Header Section End -->
 
-
-
     <!-- Chooseus Section Begin -->
     <section class="testimonials spad mt-7 pb-4">
         <div class="container">
-            <!-- Título da Seção -->
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="section-title">
@@ -482,184 +472,50 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <!-- Título da Seção -->
+                <div class="body">
+                    <ul class="body-ul" id="c">
 
-            <!-- Carrossel -->
-            <div id="servicesCarousel" class="carousel slide" data-bs-ride="carousel">
-                <!-- Indicadores -->
-                <!-- <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#servicesCarousel" data-bs-slide-to="0" class="active"
-                        aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#servicesCarousel" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
-                </div> -->
+                        <li>
+                            <h5><strong><img src="img/icons/ci-4.png" alt="Pediatria"></strong></h5>
+                            <h4 class="subtitle mt-4 mt-4">Pediatria</h4>
+                        </li>
+                        <li>
+                            <h5><strong><img src="img/icons/ci-2.png" alt="Nutrição"></strong></h5>
+                            <h4 class="subtitle mt-4">Nutrição</h4>
+                        </li>
+                        <li>
+                            <h5><strong><img src="img/icons/ci-3.png" alt="Terapia Ocupacional"></strong></h5>
+                            <h4 class="subtitle mt-4">Terapia Ocupacional</h4>
+                        </li>
+                        <li>
+                            <h5><strong><img src="img/icons/ci-1.png" alt="Vacinação"></strong></h5>
+                            <h4 class="subtitle mt-4">Vacinação</h4>
+                        </li>
 
-                <!-- Slides -->
-                <div class="carousel-inner">
-                    <!-- Slide 1 -->
-                    <div class="carousel-item active">
-                        <div class="row">
-                            <!-- Pediatria -->
-                            <div class="col-lg-3 col-md-6 col-sm-6">
-                                <div class="chooseus__item">
-                                    <img src="img/icons/ci-4.png" alt="Pediatria">
-                                    <h5 class="subtitle">Pediatria</h5>
-                                    <!-- <p>Cuidado especializado para crianças em todas as fases de crescimento.</p> -->
-                                </div>
-                            </div>
-                            <!-- Nutrição -->
-                            <div class="col-lg-3 col-md-6 col-sm-6">
-                                <div class="chooseus__item">
-                                    <img src="img/icons/ci-2.png" alt="Nutrição">
-                                    <h5 class="subtitle">Nutrição</h5>
-                                    <!-- <p>Planos alimentares personalizados para promover saúde e bem-estar.</p> -->
-                                </div>
-                            </div>
-                            <!-- Terapia Ocupacional -->
-                            <div class="col-lg-3 col-md-6 col-sm-6">
-                                <div class="chooseus__item">
-                                    <img src="img/icons/ci-3.png" alt="Terapia Ocupacional">
-                                    <h5 class="subtitle">Terapia Ocupacional</h5>
-                                    <!-- <p>Apoio no desenvolvimento e bem-estar físico, psicológico e emocional.</p> -->
-                                </div>
-                            </div>
-                            <!-- Vacinação -->
-                            <div class="col-lg-3 col-md-6 col-sm-6">
-                                <div class="chooseus__item">
-                                    <img src="img/icons/ci-1.png" alt="Vacinação">
-                                    <h5 class="subtitle">Vacinação</h5>
-                                    <!-- <p>Imunização segura para todas as idades, adaptada às suas necessidades.</p> -->
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Slide 2 -->
-                    <div class="carousel-item">
-                        <div class="row">
-                            <!-- Terapia Ocupacional -->
-                            <div class="col-lg-3 col-md-6 col-sm-6">
-                                <div class="chooseus__item">
-                                    <img src="img/icons/ci-3.png" alt="Terapia Ocupacional">
-                                    <h5 class="subtitle">Terapia Ocupacional</h5>
-                                    <!-- <p>Apoio no desenvolvimento e bem-estar físico, psicológico e emocional.</p> -->
-                                </div>
-                            </div>
-                            <!-- Vacinação -->
-                            <div class="col-lg-3 col-md-6 col-sm-6">
-                                <div class="chooseus__item">
-                                    <img src="img/icons/ci-1.png" alt="Vacinação">
-                                    <h5 class="subtitle">Vacinação</h5>
-                                    <!-- <p>Imunização segura para todas as idades, adaptada às suas necessidades.</p> -->
-                                </div>
-                            </div>
-                            <!-- Nutrição -->
-                            <div class="col-lg-3 col-md-6 col-sm-6">
-                                <div class="chooseus__item">
-                                    <img src="img/icons/ci-2.png" alt="Nutrição">
-                                    <h5 class="subtitle">Nutrição</h5>
-                                    <!-- <p>Planos alimentares personalizados para promover saúde e bem-estar.</p> -->
-                                </div>
-                            </div>
-                            <!-- Pediatria -->
-                            <div class="col-lg-3 col-md-6 col-sm-6">
-                                <div class="chooseus__item">
-                                    <img src="img/icons/ci-4.png" alt="Pediatria">
-                                    <h5 class="subtitle">Pediatria</h5>
-                                    <!-- <p>Cuidado especializado para crianças em todas as fases de crescimento.</p> -->
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Controles -->
-                <div class="">
-                    <button class="carousel-control-prev rounded-circle" type="button"
-                        data-bs-target="#servicesCarousel" data-bs-slide="prev">
-
-                        <span class="" aria-hidden="true"><i class="fa fa-arrow-left" aria-hidden="true"></i></span>
-                    </button>
-                    <button class="carousel-control-next rounded-circle" type="button"
-                        data-bs-target="#servicesCarousel" data-bs-slide="next">
-                        <span class="" aria-hidden="true"><i class="fa fa-arrow-right" aria-hidden="true"></i></span>
-                    </button>
+                        <li>
+                            <h5><strong><img src="img/icons/ci-3.png" alt="Terapia Ocupacional"></strong></h5>
+                            <h4 class="subtitle mt-4">Terapia Ocupacional</h4>
+                        </li>
+                        <li>
+                            <h5><strong><img src="img/icons/ci-1.png" alt="Vacinação"></strong></h5>
+                            <h4 class="subtitle mt-4">Vacinação</h4>
+                        </li>
+                        <li>
+                            <h5><strong><img src="img/icons/ci-2.png" alt="Nutrição"></strong></h5>
+                            <h4 class="subtitle mt-4">Nutrição</h4>
+                        </li>
+                        <li>
+                            <h5><strong><img src="img/icons/ci-4.png" alt="Pediatria"></strong></h5>
+                            <h4 class="subtitle mt-4">Pediatria</h4>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
     </section>
-    <!-- Chooseus Section End -->
 
-
-
-    <!-- Chooseus Section End -->
-
-
-
-
-
-    <!-- Início da Secção de Serviços -->
-    <!-- <section class="chooseus spad">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="consultation__text p-0">
-                        <div class="row">
-                            <div class="col-lg-4 col-md-4">
-                                <div class="consultation__video set-bg" data-setbg="img/gallery/gallery-4.jpg"
-                                    style="background-image: url(&quot;img/clinica.jpg&quot;); height: 33rem;">
-                                </div>
-                            </div>
-                            <div class="col-lg-8 col-md-8 d-flex">
-                                <div class="consultation__text__item align-content-center">
-                                    <div class="section-title mb-2">
-                                        <h2>Conheça <i> A Clínica</i></h2>
-                                        <span>A Clínica conta com uma clínica especializada, equipada com uma
-                                            equipa multidisciplinar.</span>
-                                    </div>
-                                    <div class="row">
-                                        <div class="paragrafo m-4">
-                                            <div class="col-lg-10 col-md-10 col-sm-10">
-                                                <ul class="services__details__feature">
-                                                    <li><i class="fa fa-check-circle"></i> A Clínica é uma instituição
-                                                        de saúde com o foco na família.
-                                                        Desejamos
-                                                        apoiar
-                                                        as famílias na jornada da maternidade e
-                                                        paternidade, cuidando de todos os elementos que as constituem
-                                                        física,
-                                                        psicológica e emocionalmente.</li>
-                                                    <li><i class="fa fa-check-circle"></i> N’A Clínica</i> vai
-                                                        encontrar, entre outras, as especialidades de
-                                                        Pediatria,
-                                                        Nutrição, Vacinação e Terapia Ocupacional.</li>
-                                                    <li><i class="fa fa-check-circle"></i>Orgulhamo-nos de ser a única
-                                                        instituição de saúde em Moçambique com uma
-                                                        sala
-                                                        multissensorial Snoezelen.</li>
-                                                    <li><i class="fa fa-check-circle"></i> A nossa equipa
-                                                        multidisciplinar de excelência está ao seu dispor para
-                                                        tornar
-                                                        a sua experiência de maternidade e
-                                                        paternidade o mais agradável possível.
-                                                        Pais informados, são pais mais seguros e confiantes!
-                                                    </li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="load__more">
-                                        <a href="#" class="primary-btn">Mais Informações</a>
-                                    </div>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
-    <!-- Fim da Secção de Serviços -->
 
 
     <!-- Hero Section Begin -->
@@ -1370,25 +1226,54 @@
         </div>
     </footer>
     <!-- Seção de Rodapé Fim -->
-    <script>
-        // $('.carousel').carousel({
-        //     interval: 1000 * 10
-        // });
-        function likeButton() {
-            let heart = document.querySelector('.heart');
-            let likes = document.querySelector('.likes');
-            if (heart.src.match("img/icons/heart.png")) {
-                heart.src = "img/icons/heart_red.png";
-                likes.innerHTML = "5,490 likes";
-            } else {
-                heart.src = "img/icons/heart.png";
-                likes.innerHTML = "5,489 likes"
-            }
-        }
-    </script>
-    <!-- Js Plugins -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 
+
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1VDDWMRSTH"></script>
+    <script>
+        var timer = 4000;
+
+        var i = 0;
+        var max = $('#c > li').length;
+
+        $("#c > li").eq(i).addClass('active').css('left', '0');
+        $("#c > li").eq(i + 1).addClass('active').css('left', '25%');
+        $("#c > li").eq(i + 2).addClass('active').css('left', '50%');
+        $("#c > li").eq(i + 3).addClass('active').css('left', '75%');
+
+
+        setInterval(function () {
+
+            $("#c > li").removeClass('active');
+
+            $("#c > li").eq(i).css('transition-delay', '0.25s');
+            $("#c > li").eq(i + 1).css('transition-delay', '0.5s');
+            $("#c > li").eq(i + 2).css('transition-delay', '0.75s');
+            $("#c > li").eq(i + 3).css('transition-delay', '1s');
+
+            if (i < max - 4) {
+                i = i + 4;
+            }
+
+            else {
+                i = 0;
+            }
+
+            $("#c > li").eq(i).css('left', '0').addClass('active').css('transition-delay', '1.25s');
+            $("#c > li").eq(i + 1).css('left', '25%').addClass('active').css('transition-delay', '1.5s');
+            $("#c > li").eq(i + 2).css('left', '50%').addClass('active').css('transition-delay', '1.75s');
+            $("#c > li").eq(i + 3).css('left', '75%').addClass('active').css('transition-delay', '2s');
+
+        }, timer);
+
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'G-1VDDWMRSTH');
+    </script>
+
+    <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.magnific-popup.min.js"></script>
