--- a/teste.html
+++ b/teste.html
@@ -172,7 +172,7 @@
 
         .body>.body-ul {
             position: absolute;
-            width: 100%;
+            width: 80% !important;
         }
 
         ul.body-ul>li {
@@ -189,7 +189,7 @@
         }
 
         li h5 strong img {
-            height: 7rem;
+            font-weight: 600;
         }
 
         .active {
@@ -479,36 +479,36 @@
 
                         <li>
                             <h5><strong><img src="img/icons/ci-4.png" alt="Pediatria"></strong></h5>
-                            <h4 class="subtitle mt-4 mt-4">Pediatria</h4>
+                            <h5 class="subtitle mt-4 mt-4">Pediatria</h5>
                         </li>
                         <li>
                             <h5><strong><img src="img/icons/ci-2.png" alt="Nutrição"></strong></h5>
-                            <h4 class="subtitle mt-4">Nutrição</h4>
+                            <h5 class="subtitle mt-4">Nutrição</h5>
                         </li>
                         <li>
                             <h5><strong><img src="img/icons/ci-3.png" alt="Terapia Ocupacional"></strong></h5>
-                            <h4 class="subtitle mt-4">Terapia Ocupacional</h4>
+                            <h5 class="subtitle mt-4">Terapia Ocupacional</h5>
                         </li>
                         <li>
                             <h5><strong><img src="img/icons/ci-1.png" alt="Vacinação"></strong></h5>
-                            <h4 class="subtitle mt-4">Vacinação</h4>
+                            <h5 class="subtitle mt-4">Vacinação</h5>
                         </li>
 
                         <li>
                             <h5><strong><img src="img/icons/ci-3.png" alt="Terapia Ocupacional"></strong></h5>
-                            <h4 class="subtitle mt-4">Terapia Ocupacional</h4>
+                            <h5 class="subtitle mt-4">Terapia Ocupacional</h5>
                         </li>
                         <li>
                             <h5><strong><img src="img/icons/ci-1.png" alt="Vacinação"></strong></h5>
-                            <h4 class="subtitle mt-4">Vacinação</h4>
+                            <h5 class="subtitle mt-4">Vacinação</h5>
                         </li>
                         <li>
                             <h5><strong><img src="img/icons/ci-2.png" alt="Nutrição"></strong></h5>
-                            <h4 class="subtitle mt-4">Nutrição</h4>
+                            <h5 class="subtitle mt-4">Nutrição</h5>
                         </li>
                         <li>
                             <h5><strong><img src="img/icons/ci-4.png" alt="Pediatria"></strong></h5>
-                            <h4 class="subtitle mt-4">Pediatria</h4>
+                            <h5 class="subtitle mt-4">Pediatria</h5>
                         </li>
                     </ul>
                 </div>
@@ -522,7 +522,7 @@
     <section class="hero spad set-bg" data-setbg="img/hero-bg.jpg">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 mt-5 ml-5">
+                <div class="col-lg-6 mt-8 ml-5">
                     <div class="hero__text">
                         <!-- <span>Bem-vindo à A Clínica</span> -->
                         <h2>Somos a aldeia <br>da SUA família</h2>
