--- a/index.html
+++ b/index.html
@@ -542,21 +542,21 @@
                 <div class="col-lg-4">
                     <div class=" p-0">
                         <div class="consultation__video set-bg" data-setbg="img/gallery/gallery-4.jpg"
-                            style="background-image: url(&quot;img/gallery/gallery-4.jpg&quot;); height: 33rem;">
+                            style="background-image: url(&quot;img/gallery/gallery-4.jpg&quot;); height: 51rem;">
                         </div>
                     </div>
                 </div>
 
                 <div class="col-lg-8">
-                    <div class="consultation__text">
+                    <div class="consultation__text p-0">
                         <div class="row">
                             <!-- Texto Principal -->
                             <div class="col-lg-6 col-md-6">
                                 <div class="consultation__text__item">
                                     <div class="section-title">
                                         <h2>Conheça a <i>Clínica</i></h2>
-                                        <span>A Clínica conta com uma clínica especializada, equipada com uma equipa
-                                            multidisciplinar.</span>
+                                        <!-- <span>A Clínica conta com uma clínica especializada, equipada com uma equipa
+                                            multidisciplinar.</span> -->
                                     </div>
                                     <p>
                                         A Clínica é uma instituição
@@ -566,22 +566,22 @@
                                         as famílias na jornada da maternidade e
                                         paternidade, cuidando de todos os elementos que as constituem
                                         física,
-                                        psicológica e emocionalmente.</br>
-                                        <!-- N’A Clínica</i> vai
+                                        psicológica e emocionalmente.</br><br>
+                                        N’A Clínica</i> vai
                                         encontrar, entre outras, as especialidades de
                                         Pediatria,
-                                        Nutrição, Vacinação e Terapia Ocupacional.</br>
-                                       Orgulhamo-nos de ser a única
+                                        Nutrição, Vacinação e Terapia Ocupacional.</br><br>
+                                        Orgulhamo-nos de ser a única
                                         instituição de saúde em Moçambique com uma
                                         sala
-                                        multissensorial Snoezelen.</br>
-                                        <i class="fa fa-check-circle"></i> A nossa equipa
+                                        multissensorial Snoezelen.</br><br>
+                                        A nossa equipa
                                         multidisciplinar de excelência está ao seu dispor para
                                         tornar
                                         a sua experiência de maternidade e
                                         paternidade o mais agradável possível.
                                         Pais informados, são pais mais seguros e confiantes!
-                                        </br> -->
+                                        </br>
                                     </p>
                                 </div>
                                 <div class="load__more">
@@ -590,7 +590,7 @@
                             </div>
 
                             <!-- Vídeo ou Imagem Representativa -->
-                            <div class="col-lg-6 col-md-6">
+                            <div class="col-lg-6 col-md-6 d-grid align-items-center">
                                 <div class="consultation__video set-bg" data-setbg="img/consultation-video.jpg">
                                     <a href="https://www.youtube.com/watch?v=PXsuI67s2AA" class="play-btn video-popup">
                                         <i class="fa fa-play"></i>
@@ -608,7 +608,7 @@
 
 
     <!-- Início da Secção de Serviços -->
-    <section class="chooseus spad">
+    <section class="chooseus spad mt-4">
         <div class="container">
             <!-- Título da Seção -->
             <div class="row">
