--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
             <a href="#" class="primary-btn">Agendar</a>
         </div>
         <ul class="offcanvas__widget">
-            <li><a href="#"><i class="fa fa-phone"></i> +258 84 123 4567</a></li>
+            <li><a href="#" class=" text-white"><i class="fa fa-phone"></i> +258 84 123 4567</a></li>
             <li><i class="fa fa-map-marker"></i> Edifício ou Shopping 24, Avenida 24 de Julho, Loja 20</li>
             <li><i class="fa fa-clock-o"></i> Seg a Sáb 8:00 às 17:00</li>
         </ul>
@@ -99,7 +99,7 @@
                 <div class="row">
                     <div class="col-lg-8">
                         <ul class="header__top__left">
-                            <li><a href="#" class="text-white"><i class="fa fa-phone"></i> +258 84 123 4567</a></li>
+                            <li><a href="#" class=" text-white"><i class="fa fa-phone"></i> +258 84 123 4567</a></li>
                             <li><i class="fa fa-map-marker"></i> Edifício ou Shopping 24, Avenida 24 de Julho, Loja 20
                             </li>
                             <li><i class="fa fa-clock-o"></i> Seg a Sáb 8:00 às 17:00</li>
@@ -129,22 +129,22 @@
                         <nav class="header__menu">
                             <ul>
                                 <!-- Início -->
-                                <li><a class="arrow" href="./index.html">Início </a></li>
+                                <!-- <li class="active"><a class="arrow" href="./index.html">INÍCIO</a></li> -->
 
                                 <!-- A Clínica -->
-                                <li class="active"><a class="arrow" href="./about.html">A Clínica <span
+                                <li><a class="arrow" href="./about.html">A Clínica <span
                                             class="dropdown-arrow"></span></a>
                                     <ul class="dropdown">
-                                        <li class="active"><a href="./about.html">Sobre Nós</a></li>
+                                        <li><a href="./about.html">Sobre Nós</a></li>
                                         <li><a href="./team.html">Equipa</a></li>
-                                        <li><a href="./partners.html">Parcerias</a></li>
+                                        <li><a href="./partners.html">O nosso trabalho humanitário</a></li>
+                                        <li><a href="./partners.html">Pedido de informação/ Agendamento</a></li>
                                     </ul>
                                 </li>
 
                                 <!-- Consultas -->
-                                <li><a class="arrow" href="./services.html">Consultas <span
-                                            class="dropdown-arrow"></span></a>
-                                    <div class="dt-mega-menu-wrap">
+                                <li><a class="arrow">Consultas <span class="dropdown-arrow"></span></a>
+                                    <div class="dt-mega-menu-wrap justify-content-center d-flex">
                                         <ul class="dropdown menu">
                                             <li>
                                                 <span>Amamentação</span>
@@ -152,9 +152,8 @@
                                                     <li><a href="#">Consulta Pré-parto</a></li>
                                                     <li><a href="#">Consulta Pós-parto</a></li>
                                                 </ul>
-                                            </li>
-                                            <li>
-                                                <span>Medicina do Viajante</span>
+                                                <br>
+                                                <span class="pt-4">Medicina do Viajante</span>
                                                 <ul class="dropdown-sec">
                                                     <li><a href="#">Consulta</a></li>
                                                 </ul>
@@ -162,8 +161,17 @@
                                             <li>
                                                 <span>Cirurgia</span>
                                                 <ul class="dropdown-sec">
+                                                    <li><a href="#">Consulta de Cirurgia</a></li>
                                                     <li><a href="#">Circuncisão com anel</a></li>
-                                                    <li><a href="#">Sutura de feridas</a></li>
+                                                    <li><a href="#">Sutura de feridas superficiais</a></li>
+                                                </ul>
+                                                <br>
+                                                <span>Enfermagem
+                                                </span>
+                                                <ul class="dropdown-sec">
+                                                    <li><a href="#">Apoio domiciliário no pós-parto</a></li>
+                                                    <li><a href="#">Consulta de enfermagem</a></li>
+                                                    <li><a href="#">Pensos</a></li>
                                                 </ul>
                                             </li>
                                             <li>
@@ -172,6 +180,35 @@
                                                     <li><a href="#">Nutrição Geral</a></li>
                                                     <li><a href="#">Nutrição Infantil</a></li>
                                                     <li><a href="#">Diabetes Gestacional</a></li>
+                                                    <li><a href="#">Pré-conceção</a></li>
+                                                    <li><a href="#">Pré-natal</a></li>
+                                                </ul>
+                                            </li>
+                                            <li>
+                                                <span>Pediatria</span>
+                                                <ul class="dropdown-sec">
+                                                    <li><a href="#">Pré-natal</a></li>
+                                                    <li><a href="#">Rotina</a></li>
+                                                    <li><a href="#">Criança doente</a></li>
+                                                    <li><a href="#">Introdução alimentar</a></li>
+                                                </ul>
+                                            </li>
+                                            <li>
+                                                <span>Terapia ocupacional</span>
+                                                <ul class="dropdown-sec">
+                                                    <li><a href="#">Infantil</a></li>
+                                                    <li><a href="#">Neurológica</a></li>
+                                                    <li><a href="#">Saúde Mental</a></li>
+                                                    <li><a href="#">Snoezelen</a></li>
+                                                </ul>
+                                            </li>
+                                            <li>
+                                                <span>Testes diagnósticos</span>
+                                                <ul class="dropdown-sec">
+                                                    <li><a href="#">Teste do pezinho</a></li>
+                                                    <li><a href="#">Teste rápido de amigdalite bacteriana</a></li>
+                                                    <li><a href="#">Teste rápido de malária</a></li>
+                                                    <li><a href="#">Teste rápido de urina</a></li>
                                                 </ul>
                                             </li>
                                         </ul>
@@ -179,29 +216,101 @@
                                 </li>
 
                                 <!-- Serviços Adicionais -->
-                                <li><a class="arrow" href="./additional-services.html">Serviços Adicionais <span
+                                <li><a class="arrow" href="./additional-services.html">Vacinação<span
                                             class="dropdown-arrow"></span></a>
                                     <ul class="dropdown">
-                                        <li><a href="#">Apoio Domiciliar</a></li>
-                                        <li><a href="#">Workshops</a></li>
-                                        <li><a href="#">Cursos</a></li>
+                                        <li><a href="#">Adulto</a></li>
+                                        <li><a href="#">Gravidez</a></li>
+                                        <li><a href="#">Infantil</a></li>
+                                        <li><a href="#">Viajante</a></li>
                                     </ul>
                                 </li>
-
-                                <!-- Galeria -->
-                                <li><a href="./gallery.html">Galeria</a></li>
-
-                                <!-- Contato -->
-                                <li><a href="./contact.html">Contacto</a></li>
+                                <!-- Consultas -->
                                 <li>
-                                    <a href="#" class="primary-btn"> <i class="fa fa-lock"></i> Área Reservada</a>
+                                    <a class="arrow">Gravidez <span class="dropdown-arrow"></span></a>
+                                    <div class="dt-mega-menu-wrap justify-content-center d-flex">
+                                        <ul class="dropdown menu grav">
+                                            <li>
+                                                <span>A Clínica durante a gravidez</span>
+                                                <ul class="dropdown-sec">
+                                                    <li><a href="#">Amamentação</a></li>
+                                                    <li><a href="#">Pediatria pré-natal</a></li>
+                                                    <li><a href="#">Nutrição: pré-conceção, pré-natal, Diabetes
+                                                            Gestacional</a></li>
+                                                    <li><a href="#">Snoezelen na gravidez</a></li>
+                                                </ul>
+                                            </li>
+
+                                            <li>
+                                                <span>Preparação para a Amamentação</span>
+                                                <ul class="dropdown-sec">
+                                                    <li><a href="#">Curso Normal em grupo</a></li>
+                                                    <li><a href="#">Curso Individual</a></li>
+                                                    <li><a href="#">Preparation for Breastfeeding in English</a></li>
+                                                </ul>
+                                                <br>
+
+                                                <ul class="dropdown-sec">
+                                                    <span>
+                                                        <li><a href="#">Galeria de fotos</a></li>
+                                                    </span>
+                                                </ul>
+
+                                            </li>
+                                            <li>
+                                                <span>Preparação para o parto</span>
+                                                <ul class="dropdown-sec">
+                                                    <li><a href="#">Curso Normal em grupo</a></li>
+                                                    <li><a href="#">Curso Individual</a></li>
+                                                    <li><a href="#">Pre-natal course in English</a></li>
+                                                </ul>
+                                                <br>
+                                                <span>Exercício Físico</span>
+                                                <ul class="dropdown-sec">
+                                                    <li><a href="#">Plano de treino para a gravidez</a></li>
+                                                </ul>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </li>
+
+                                <!-- Serviços Adicionais -->
+                                <li>
+                                    <a class="arrow">Apoio ao domicílio <span class="dropdown-arrow"></span></a>
+                                    <div class="dt-mega-menu-wrap justify-content-center d-flex">
+                                        <ul class="dropdown menu grav">
+                                            <li><a href="#">Amamentação</a></li>
+                                            <li>
+                                                <span>Pós-parto</span>
+                                                <ul class="dropdown-sec">
+                                                    <li><a href="#">Enfermagem</a></li>
+                                                    <li><a href="#">Teste do pezinho</a></li>
+                                                    <li><a href="#">Pacotes</a></li>
+                                                </ul>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </li>
+
+                                <!-- Serviços Adicionais -->
+                                <li><a class="arrow" href="./additional-services.html">Workshops<span
+                                            class="dropdown-arrow"></span></a>
+                                    <ul class="dropdown">
+                                        <li><a href="#">Amamentação</a></li>
+                                        <li><a href="#">Bebé</a></li>
+                                        <li><a href="#">Gravidez</a></li>
+                                        <li><a href="#">Introdução alimentar</a></li>
+                                        <li><a href="#">Parentalidade</a></li>
+                                        <li><a href="#">Pediatria</a></li>
+                                        <li><a href="#">Primeiros Socorros Pediátricos</a></li>
+                                        <li><a href="#">Galeria de fotos</a></li>
+                                    </ul>
+                                </li>
+                                <a href="#" class="primary-btn"> <i class="fa fa-lock"></i> Área Reservada</a>
                                 </li>
                             </ul>
 
                         </nav>
-                        <!-- <div class="header__btn">
-                            <a href="#" class="primary-btn"> <i class="fa fa-lock"></i> Área reservada</a>
-                        </div> -->
                     </div>
                 </div>
             </div>
@@ -212,7 +321,6 @@
 
     </header>
     <!-- Header Section End -->
-
 
     <!-- Blog Details Section Begin -->
     <section class="blog-details spad mt-4">
@@ -238,7 +346,7 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="section-title">
-                                        <h2 class="">A Cliínica</h2>
+                                        <h2 class="">A Clínica</h2>
                                         <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
                                     </div>
                                 </div>
@@ -276,7 +384,7 @@
                                 <div class="col-lg-6 mt-2 ml-4">
                                     <div class="hero__text">
                                         <!-- <span>Bem-vindo à A Clínica</span> -->
-                                        <h2>compreendemos o papel fundamental da família e queremos fazer parte
+                                        <h2>COMPREENDEMOS o papel fundamental da família e queremos fazer parte
                                             da sua! <b>Somos a sua aldeia!</b></h2>
                                     </div>
                                 </div>
