--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>a clinica</title>
-
+    <link rel="stylesheet" href="img/favicon.png">
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
@@ -280,14 +280,9 @@
                                     <div class="dt-mega-menu-wrap justify-content-center d-flex">
                                         <ul class="dropdown menu grav">
                                             <li><a href="#">Amamentação</a></li>
-                                            <li>
-                                                <span>Pós-parto</span>
-                                                <ul class="dropdown-sec">
-                                                    <li><a href="#">Enfermagem</a></li>
-                                                    <li><a href="#">Teste do pezinho</a></li>
-                                                    <li><a href="#">Pacotes</a></li>
-                                                </ul>
-                                            </li>
+                                            <li><a href="#">Enfermagem</a></li>
+                                            <li><a href="#">Teste do pezinho</a></li>
+                                            <li><a href="#">Pacotes</a></li>
                                         </ul>
                                     </div>
                                 </li>
@@ -306,8 +301,10 @@
                                         <li><a href="#">Galeria de fotos</a></li>
                                     </ul>
                                 </li>
-                                <a href="#" class="primary-btn"> <i class="fa fa-lock"></i> Área Reservada</a>
-                                </li>
+                                <a href="#" class="primary-btn" style="
+    right: 0;
+    position: absolute;
+"> <i class="fa fa-lock"></i> Área Reservada</a>
                             </ul>
 
                         </nav>
@@ -445,7 +442,7 @@
         </div>
     </section>
 
-    <section class="about spad mt-8">
+    <!-- <section class="about spad mt-8">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-md-6 d-flex align-items-center">
@@ -466,12 +463,12 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
 
     <!-- Seccao de contactos  -->
 
-    <section class="about spad mt-4">
+    <section class="about spad mt-8">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-md-6">
@@ -482,14 +479,14 @@
                 <div class="col-lg-6 col-md-6 d-flex align-items-center">
                     <div class="about__text">
                         <div class="section-title">
-                            <h2>Venha conhecer o nosso espaço</h2>
-                            <span> Estamos à sua disposição e queremos que se sinta em casa! </span>
+                            <h2 class="mb-2">Venha conhecer o nosso espaço</h2>
+                            <span class="mt-2"> Estamos à sua disposição e queremos que se sinta em casa! </span>
                         </div>
-                        <p>
-                            <i class="fa fa-map-marker"></i> Edifício ou Shopping 24, Avenida 24 de Julho, Loja 20
-                            <br> ( R/C, corredor central ao lado do cabeleireiro)
-                        </p>
+
                         <ul>
+                            <li><i class="fa fa-map-marker"></i> Edifício ou Shopping 24, Avenida 24 de Julho, Loja 20
+                                ( R/C, corredor central ao lado do cabeleireiro)
+                            </li>
                             <li><i class="fa fa-phone"></i> +258 845 8548 54</li>
                             <li><i class="fa fa-envelope"></i>geral@aclinica-mz.com</li>
                         </ul>
@@ -500,7 +497,7 @@
                             Avenida 24 de Julho, primeira entrada à direita. Informar os seguranças que tem consulta
                             <i>n’ A Clínica</i>.
                         </p>
-                        <a href="#" class="primary-btn normal-btn">Galeria de fotos</a>
+                        <a href="#" class="primary-btn normal-btn mt-4">Galeria de fotos</a>
                     </div>
                 </div>
             </div>
