--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Infinite Automatic Carousel Example</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-    <link rel="stylesheet" href="style.css">
+    <meta name="description" content="Clinica de Pre-pos">
+    <meta name="keywords" content="Aesthetic, Pre-pos, Clinica em Maputo, html">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>a clinica</title>
+
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
+
 
     <!-- Css Styles -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -391,7 +395,8 @@
 
                                                 <ul class="dropdown-sec">
                                                     <span>
-                                                        <li><a href="#">Galeria de fotos</a></li>
+                                                        <li><a href="#" class="primary-btn"> <i class="fa fa-lock"></i>
+                                                                Galeria de fotos</a></li>
                                                     </span>
                                                 </ul>
 
@@ -414,24 +419,15 @@
                                 </li>
 
                                 <!-- Serviços Adicionais -->
-                                <li>
-                                    <a class="arrow">Apoio ao domicílio <span class="dropdown-arrow"></span></a>
-                                    <div class="dt-mega-menu-wrap justify-content-center d-flex">
-                                        <ul class="dropdown menu grav">
-                                            <li><a href="#">Amamentação</a></li>
-                                            <li>
-                                                <span>Pós-parto</span>
-                                                <ul class="dropdown-sec">
-                                                    <li><a href="#">Enfermagem</a></li>
-                                                    <li><a href="#">Teste do pezinho</a></li>
-                                                    <li><a href="#">Pacotes</a></li>
-                                                </ul>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </li>
-
-                                <!-- Serviços Adicionais -->
+                                <li><a class="arrow" href="./additional-services.html">Apoio ao domicílio <span
+                                            class="dropdown-arrow"></span></a>
+                                    <ul class="dropdown">
+                                        <li><a href="#">Amamentação</a></li>
+                                        <li><a href="#">Enfermagem</a></li>
+                                        <li><a href="#">Teste do pezinho</a></li>
+                                        <li><a href="#">Pacotes</a></li>
+                                    </ul>
+                                </li><!-- Serviços Adicionais -->
                                 <li><a class="arrow" href="./additional-services.html">Workshops<span
                                             class="dropdown-arrow"></span></a>
                                     <ul class="dropdown">
@@ -445,8 +441,10 @@
                                         <li><a href="#">Galeria de fotos</a></li>
                                     </ul>
                                 </li>
-                                <a href="#" class="primary-btn"> <i class="fa fa-lock"></i> Área Reservada</a>
-                                </li>
+                                <a href="#" class="primary-btn" style="
+                                    right: 0;
+                                    position: absolute;
+                                "> <i class="fa fa-lock"></i> Área Reservada</a>
                             </ul>
 
                         </nav>
@@ -542,7 +540,7 @@
                 <div class="col-lg-4">
                     <div class=" p-0">
                         <div class="consultation__video set-bg" data-setbg="img/gallery/gallery-4.jpg"
-                            style="background-image: url(&quot;img/gallery/gallery-4.jpg&quot;); height: 51rem;">
+                            style="background-image: url(&quot;img/gallery/gallery-4.jpg&quot;); height: 38rem;">
                         </div>
                     </div>
                 </div>
