--- a/team.html
+++ b/team.html
@@ -56,6 +56,14 @@
             padding-bottom: 0;
             border: none;
         }
+
+        .team-content p {
+            color: #d6a294;
+        }
+
+        .team-content {
+            padding: 5px;
+        }
     </style>
 </head>
 
@@ -279,10 +287,10 @@
                                             alt="Member Photo">
                                     </div>
                                     <div class="team-content">
-                                        <h4>Virgie Perry</h4>
-                                        <h5>Athletic Trainer</h5>
-                                        <div class="team-social">
-                                            <a href="#" class="fa fa-facebook"></a>
+                                        <h4 class="mb-2">Virgie Perry</h4>
+                                        <p>Athletic Trainer</p>
+                                        <div class="team-social mt-3">
+                                            <a href="#" class="fa fa-envelope"></a>
                                             <a href="#" class="fa fa-twitter"></a>
                                             <a href="#" class="fa fa-linkedin"></a>
                                         </div>
@@ -366,8 +374,7 @@
                             <div class="col-sm-6 col-md-4 col-lg-3 single-team">
                                 <div class="inner">
                                     <div class="team-img">
-                                        <img src="https://bootdey.com/img/Content/avatar/avatar1.png"
-                                            alt="Member Photo">
+                                        <img src="img/doctor/doctor-1.jpg" alt="Member Photo">
                                     </div>
                                     <div class="team-content">
                                         <h4>Virgie Perry</h4>
