--- a/index.html
+++ b/index.html
@@ -333,6 +333,7 @@
                                                     <li><a href="#">Pré-natal</a></li>
                                                     <li><a href="#">Rotina</a></li>
                                                     <li><a href="#">Criança doente</a></li>
+                                                    <li><a href="#">Consulta de sono infantil</a></li>
                                                     <li><a href="#">Introdução alimentar</a></li>
                                                 </ul>
                                             </li>
@@ -639,8 +640,7 @@
                                 </div>
 
                                 <!-- Banner 3 -->
-                                <div class="row banner-2"
-                                    style="background-image: url('https://www.ninhosdobrasil.com.br/sites/default/files/styles/standard/public/2023-08/Sala%20Multissensorial_0.jpg?itok=C9Snpyaz');">
+                                <div class="row banner-2" style="background-image: url('img/terapia-snoezelen.jpg');">
                                     <div class="banner-text subtitle">
                                         Sala Snoezelen: a única sala multissensorial em Moçambique!
                                     </div>
