--- a/team.html
+++ b/team.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>a clinica</title>
-
+    <link rel="fluid-icon" href="https://github.com/fluidicon.png" title="GitHub">
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
@@ -375,7 +375,7 @@
                 <div class="col-lg-12 text-center">
                     <div class="section-title">
                         <div class="icone">
-                            <img src="img/icons/ENFERM.png" alt="">
+                            <img src="img/icons/times .png" alt="">
                         </div>
                         <h2>Atendimento ao Paciente</h2>
                         <!-- <span class="subtitle">A sua opinião é valiosa para nós!</span> -->
